k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  labels:
    app: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog-app
          image: ofcan1010/blog-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
